[gd_scene load_steps=4 format=3 uid="uid://ehh2ig14eqbk"]

[ext_resource type="Script" path="res://scripts/document.gd" id="1_kjxie"]
[ext_resource type="Texture2D" uid="uid://cxrdt7h7n0dw3" path="res://assets/objects/InvestigationDoc_Merina_2.png" id="2_c36s0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abnth"]
size = Vector2(236, 321)

[node name="Document" type="Node2D"]
script = ExtResource("1_kjxie")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 31)
scale = Vector2(0.261458, 0.261458)
texture = ExtResource("2_c36s0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 29.5)
shape = SubResource("RectangleShape2D_abnth")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
